WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63732
IE Web Workers demo crashes in JSC::SlotVisitor::visitChildren()
https://bugs.webkit.org/show_bug.cgi?id=63732
Summary
IE Web Workers demo crashes in JSC::SlotVisitor::visitChildren()
Simon Fraser (smfr)
Reported
2011-06-30 09:43:52 PDT
This demo crashes in TOT (e.g. nightly
r89812
) on SL.
Attachments
Crash log
(44.82 KB, text/plain)
2011-06-30 09:44 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(1.62 KB, patch)
2011-07-01 14:53 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-06-30 09:44:10 PDT
Created
attachment 99316
[details]
Crash log
Simon Fraser (smfr)
Comment 2
2011-06-30 09:44:46 PDT
<
rdar://problem/9704692
>
Oliver Hunt
Comment 3
2011-07-01 14:53:04 PDT
Created
attachment 99527
[details]
Patch
Oliver Hunt
Comment 4
2011-07-01 15:03:10 PDT
Committed
r90282
: <
http://trac.webkit.org/changeset/90282
>
Simon Fraser (smfr)
Comment 5
2011-07-01 15:12:17 PDT
No testcase?
Oliver Hunt
Comment 6
2011-07-01 15:14:28 PDT
(In reply to
comment #5
)
> No testcase?
Not feasible -- the most reliable testcase i could create took 20 seconds to run, and even then didn't fire all that often. In the past i've been told off for tests that took 5 seconds so 20 seemed excessive.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug