2011-07-01  Oliver Hunt  <oliver@apple.com>

IE Web Workers demo crashes in JSC::SlotVisitor::visitChildren()
        https://bugs.webkit.org/show_bug.cgi?id=63732

        Reviewed by Gavin Barraclough.

        Initialise the memory at the head of the new storage so that
        GC is safe if triggered by reportExtraMemoryCost.

        * runtime/JSArray.cpp:
        (JSC::JSArray::increaseVectorPrefixLength):

Canonical link: https://commits.webkit.org/79549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90282 268f45cc-cd09-0410-ab3c-d52691b4dbfc